adds second button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
      <button>Add</button>
+     <button>Delete list</button>
      <ul>
          <li>uno</li>
          <li>dos</li>
